--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore nemo eos et voluptatibus voluptatem deserunt suscipit aliquid provident dolorum perferendis, repellat mollitia sequi labore, modi fuga nulla nesciunt asperiores explicabo.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, dolorem dolores harum, consequuntur earum, quibusdam ex doloremque neque repellendus ipsa atque perspiciatis. Ea eveniet iusto perspiciatis asperiores sunt quibusdam commodi!</p>
         </article>
     </main>
 </body>
